--- a/GlenRockAppV1/res/values/strings.xml
+++ b/GlenRockAppV1/res/values/strings.xml
@@ -38,4 +38,10 @@
         <item >Contact Person B</item>
         <item >Contact Person C</item>
     </string-array>
+    <string-array name="go_local_button_names">
+        <item >category 1</item>
+        <item >category 2</item>
+        <item >category 3</item>
+        <item >category 4</item>
+    </string-array>
 </resources>
