--- a/GlenRockAppV2/GlenRockAppV1/res/values/strings.xml
+++ b/GlenRockAppV2/GlenRockAppV1/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="hello_world">Hello world!</string>
     <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris dictum metus sed velit commodo posuere. Ut sed purus sit amet purus pulvinar imperdiet ut quis arcu. Suspendisse adipiscing lacinia urna, sed accumsan turpis iaculis vel. Mauris dictum, tortor at porta ullamcorper, nisl diam tincidunt enim, vitae dapibus odio eros quis orci. Praesent egestas massa euismod metus molestie lacinia congue sed purus. Vivamus justo eros, mollis sed orci</string>
 	<string-array name="navigation_array">
-	    <item>Emergency</item>
-        <item>News</item>
+	    <!-- <item>Emergency</item>  -->
+         <item>News</item>
         <item>Calendar</item>
         <item>Local</item>
         <item>Trash/Recycling</item>
