--- a/GlenRockAppV2/GlenRockAppV1/res/values/strings.xml
+++ b/GlenRockAppV2/GlenRockAppV1/res/values/strings.xml
@@ -37,7 +37,6 @@
     <string-array name="go_local_button_names">
 		<item>Leisure/Entertainment/Arts</item>
 		<item>Education</item>
-		<item>Fitness</item>
 		<item>Home Repair and Construction</item>
 		<item>Healthcare/Medical</item>
 		<item>Real Estate</item>
@@ -46,6 +45,7 @@
 		<item>Salons and Spas</item>
 		<item>Restaurants/Food/Catering</item>
 		<item>Professional Services</item>
+		<!--<item>Fitness</item> -->
     </string-array>
     <string-array name="go_local_leisure_business_names">
         <item >Leisure Business 1</item>
